--- a/index.html
+++ b/index.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
-    <title>Szollosi Balint</title>
-    <link rel="stylesheet" href="style.css" >
-    <meta charset="UTF-8" >
-    <meta name="keywords" content="Oraimunka" >
-    <meta name="author" content="SzöllősiBálint" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  </head>
-  <body>
-    <div id="menu">
-      <ul>
-        <li><a href="#">Cégbemutató</a></li>
-        <li><a href="#">Megoldások</a></li>
-        <li><a href="#">Esettanulmányok</a></li>
-        <li><a href="#">Karrier</a></li>
-        <li><a href="#">Hírek</a></li>
-        <li><a href="#">Kapcsolat</a></li>
-      </ul>
-    </div>
-      <div id="container">
-        <h1>Kinek ajánjuk?</h1>
-        <div class="tartalom">
-          <div class="cikk">
-            <h2>Cég méret</h2>
-            <img src="kep_3.png" alt="lel" />
-            <ul>
-              <li>50 főnél nagyobb alkalmazotti létszám</li>
-              <li>1 Mrd éves forgalom felett</li>
-              <li>KKV-k</li>
-              <li>Nagyvállaltok</li>
-            </ul>
-          </div>
-          <div class="cikk">
-            <h2>Iparág</h2>
-            <img src="kep_2.png" alt="lel" />
-            <ul>
-              <li>Bármilyen iparági terület</li>
-              <li>Államigazgatás</li>
-              <li>Nagy ügyfélkörrel rendelkező vállalatok</li>
-              <li>Üzletileg kritikus területen működő vállalkozások</li>
-            </ul>
-          </div>
-          <div class="cikk">
-            <h2>Üzleti probléma</h2>
-            <img src="kep_1.png" alt="lel" />
-            <ul>
-              <li>
-                Jelenlegi szoftverekkel nem sikerül megvalósítani az üzleti
-                követelményeket.
-              </li>
-              <li>A régi szoftver folyamatos fejlesztése túl sokba kerül.</li>
-              <li>Új szoftvert szeretnének.</li>
-              <li>Dobozos szoftverek korlátjai.</li>
-              <li>Megszűnt, vagy elérhetetlenné vált a korábbi fejlesztő.</li>
-              <li>A jelenlegi szoftver teljesítménye nem elegendő.</li>
-            </ul>
-          </div>
-        </div>
+
+<head>
+  <title>Szollosi Balint</title>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Oraimunka">
+  <meta name="author" content="SzöllősiBálint">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+  <div id="menu">
+    <ul>
+      <li><a href="#">Cégbemutató</a></li>
+      <li><a href="#">Megoldások</a></li>
+      <li><a href="#">Esettanulmányok</a></li>
+      <li><a href="#">Karrier</a></li>
+      <li><a href="#">Hírek</a></li>
+      <li><a href="#">Kapcsolat</a></li>
+    </ul>
+  </div>
+  <div id="container">
+    <h1>Kinek ajánjuk?</h1>
+    <div class="tartalom">
+      <div class="cikk">
+        <h2>Cég méret</h2>
+        <img src="kep_3.png" alt="lel" />
+        <ul>
+          <li>50 főnél nagyobb alkalmazotti létszám</li>
+          <li>1 Mrd éves forgalom felett</li>
+          <li>KKV-k</li>
+          <li>Nagyvállaltok</li>
+        </ul>
       </div>
-  </body>
+      <div class="cikk2">
+        
+          <h2>Iparág</h2>
+          <img src="kep_2.png" alt="lel" />
+          <ul>
+            <li>Bármilyen iparági terület</li>
+            <li>Államigazgatás</li>
+            <li>Nagy ügyfélkörrel rendelkező vállalatok</li>
+            <li>Üzletileg kritikus területen működő vállalkozások</li>
+          </ul>
+        
+      </div>
+      <div class="cikk">
+        <h2>Üzleti probléma</h2>
+        <img src="kep_1.png" alt="lel" />
+        <ul>
+          <li>
+            Jelenlegi szoftverekkel nem sikerül megvalósítani az üzleti
+            követelményeket.
+          </li>
+          <li>A régi szoftver folyamatos fejlesztése túl sokba kerül.</li>
+          <li>Új szoftvert szeretnének.</li>
+          <li>Dobozos szoftverek korlátjai.</li>
+          <li>Megszűnt, vagy elérhetetlenné vált a korábbi fejlesztő.</li>
+          <li>A jelenlegi szoftver teljesítménye nem elegendő.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
