--- a/index.html
+++ b/index.html
@@ -62,6 +62,23 @@
         </ul>
       </div>
     </div>
+      <div class="tartalom2">
+        <div class="cikk3">
+          <h1>Az egyedi szoftverfejlesztés folyamata az EuroMACC-nél</h1>
+          <h3>Egy bonyolultabb rendszer esetében szükség lehet az alkalmazottak betanítására, illetve a rendszerről szóló dokumentáció átadására. Az üzemeltetés során biztosítjuk a rendszer korszerű alapokon nyugvó futtatását, ezen kívül pedig lehetőséget nyújtunk a további fejlesztési igények kielégítésére.
+
+            A nulladik lépést azonban Önnek kell megtennie az alábbi űrlap kitöltésével, hogy kollégánk egy napon belül felvehesse Önnel a kapcsolatot:</h3>
+        </div>
+        <div class="cikk3">
+          <img src="folyamatabra-1-500x680.png" alt="folyamatabra" id="jobb">
+
+        </div>
+
+
+
+      </div>
+    <div class="tartalom3">
+
   </div>
 </body>
 
