https://github.com/baalintka/Html.css.gyakorlas.git

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
         </ul>
       </div>
     </div>
-      <div class="tartalom2">
-        <div class="cikk3">
-          <h1>Az egyedi szoftverfejlesztés folyamata az EuroMACC-nél</h1>
-          <h3>Egy bonyolultabb rendszer esetében szükség lehet az alkalmazottak betanítására, illetve a rendszerről szóló dokumentáció átadására. Az üzemeltetés során biztosítjuk a rendszer korszerű alapokon nyugvó futtatását, ezen kívül pedig lehetőséget nyújtunk a további fejlesztési igények kielégítésére.
+        <div class="tartalom2">
+          <div class="cikk3">
+            <h1>Az egyedi szoftverfejlesztés folyamata az EuroMACC-nél</h1>
+            <h3>Egy bonyolultabb rendszer esetében szükség lehet az alkalmazottak betanítására, illetve a rendszerről szóló dokumentáció átadására. Az üzemeltetés során biztosítjuk a rendszer korszerű alapokon nyugvó futtatását, ezen kívül pedig lehetőséget nyújtunk a további fejlesztési igények kielégítésére.
 
             A nulladik lépést azonban Önnek kell megtennie az alábbi űrlap kitöltésével, hogy kollégánk egy napon belül felvehesse Önnel a kapcsolatot:</h3>
-        </div>
-        <div class="cikk3">
-          <img src="folyamatabra-1-500x680.png" alt="folyamatabra" id="jobb">
+          </div>
+          <div class="cikk3">
+            <img src="folyamatabra-1-500x680.png" alt="folyamatabra" id="jobb">
 
         </div>
 
@@ -78,8 +78,33 @@
 
       </div>
     <div class="tartalom3">
+      <div class="cikk4">
+      <h1>Sales kollégák</h1>
+      <h4>További információt szeretne megtudni szolgáltatásainkról vagy termékeinkről?Sales kollégáink készséggel állnak.Keresse őket az alábbi elérhetőségek bármelyikén.</h4>
+      </div>
+      <div class="cikk5">
+        <img src="az-igazan-sikeres-emberek-titkai.jpg" alt="lel" />
+        <img src="bean.png" alt="lel" />
+        <img src="sasNévtelen.png" alt="lel" />
+        <img src="images.jpg" alt="lel" />
 
-  </div>
+      </div>
+      <div class="cikk6">
+        <h4>Kereskedelmi igazgató</h4>
+        <h4>Sales manager</h4>
+        <h4>Sales manager</h4>
+        <h4>Key account manager</h4>
+      </div>
+      <div class="cikk7">
+        <h4>Mutasd az elérhetőségeket</h4>
+        <h4>Mutasd az elérhetőségeket</h4>
+        <h4>Mutasd az elérhetőségeket</h4>
+        <h4>Mutasd az elérhetőségeket</h4>
+      </div>
+    </div>
+  
+</div>
+
 </body>
 
 </html>
